<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kuna\'s Tickers &amp; Widgets</string>
    <string name="action_settings">Settings</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="apply_widget">apply</string>
    <string name="title_activity_detail">Detail</string>
    <string name="tab_buy">BUY</string>
    <string name="tab_sell">SELL</string>
    <string name="tab_trades">TRADES</string>
    <string name="tab_orders">ORDERS</string>
    <string name="tab_deals">DEALS</string>
    <string name="market_last_price">last transaction price</string>
    <string name="about_subtitle">implementation of API trading platform \"Kuna Exchange\"</string>
    <string name="about_agreement">The program is delivered as is. No warranty of any kind is provided or implied. \n\nYou use this software at your own risk. \n\nThe author will not be liable for loss of data, loss, lost profits or any other type of loss when using this software .\n\nAt the same time, the Author guarantees that during the development of the program they did not and will not use any parts of the program code carrying destructive actions or collecting information about the user without his knowledge.</string>
    <string name="about">About</string>
    <string name="uah_title"> Hryvnia</string>
    <string name="title_activity_user_info">Accounts</string>
    <string name="menu_empty_balances">Empty balances</string>
    <string name="empty_balance_show">empty balances are displayed</string>
    <string name="empty_balance_hide">empty balances are hidden</string>
    <string name="delete_entry">Deleting an order</string>
    <string name="confirm_delete_order">Are you sure you want to delete this entry:</string>
    <string name="confirmation_order_price">by price</string>
    <string name="confirmation_order_amount">for the amount of</string>
    <string name="label_sell">SELL</string>
    <string name="label_buy">BUY</string>
    <string name="label_available">Available</string>
    <string name="label_price">Price</string>
    <string name="label_quantity">Quantity</string>
    <string name="label_amount">Amount</string>
    <string name="label_submit">submit</string>
    <string name="label_cancel">cancel</string>
    <string name="error_order_amount_zero">the order amount must be greater than 0</string>
    <string name="confirmation_order_title">Order confirmation</string>
    <string name="error_order_auth">To perform the purchase and sale operations, as well as to display information about the user\'s open and executed orders, pre-authorization using private and private keys is required. Their values can be specified in the settings.</string>
    <string name="confirmation_order_operation_buy">buy</string>
    <string name="confirmation_order_operation_sell">sell</string>
    <string name="title_activity_new_order">New order</string>
    <string name="new_order_for">New order</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_markets">List of markets</string>
    <string name="pref_header_watcher">Observer</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_keys">API tokens</string>
    <string name="key_input_message">Scan the QR code, enter or paste the key value from the clipboard. The following value will be encrypted when saved.</string>
    <string name="key_value">key value</string>
    <string name="key_button_save">save</string>
    <string name="key_button_cancel">cancel</string>
    <string name="switch_sort_price">Sort the listing markets</string>
    <string name="markets_uah_olnly">Only UAH markets</string>
    <string name="switch_use_rate">Perform price calculation in USD</string>
    <string name="rate_usduah">The value of the USD/UAH rate</string>
    <string name="public_key">Public key</string>
    <string name="private_key">Private key</string>
    <string name="key_removal">Removing keys</string>
    <string name="key_removal_summary">Tap to delete the key values stored on the device.</string>
    <string name="value_not_specified">value not specified</string>
    <string name="switch_notifications_alert">Notification of alerts</string>
    <string name="switch_notifications_vibrate">Vibration</string>
    <string name="switch_notifications_led">Light indicator</string>
    <string name="switch_notifications_sound">Sound</string>
    <string name="switch_notifications_ringtone">Melody</string>
    <string name="switch_observer">Observer mode</string>
    <string name="switch_observer_price">Price change</string>
    <string name="switch_observer_order">Order execution</string>
    <string name="observer_launch_frequency">Frequency of monitoring</string>
    <string name="switch_observer_summary">provides the ability to track events on the stock exchange in the background</string>
    <string name="switch_observer_price_summary">tracking events to achieve market rates within specified limits</string>
    <string name="switch_observer_order_summary">tracking the closing event of the user\'s orders</string>
    <string name="key_removal_confirm">Do you really want to delete the key values stored on the device?</string>
    <string name="turn_on_flashlight">flash on</string>
    <string name="turn_off_flashlight">flash off</string>
    <string name="flash">flash</string>
    <string name="title_activity_scanner">Scanner</string>
    <string name="key_length_error">you are expected to enter a string of 40 characters</string>
    <string name="pin_4_8">(from 4 to 8 digits)</string>
    <string name="pin_confirm">confirm the PIN</string>
    <string name="pin_correct">access granted</string>
    <string name="pin_different">the entered value is different, please re-enter</string>
    <string name="pin_enter">enter PIN</string>
    <string name="pin_reset">pin reset</string>
    <string name="pin_reset_confirm">The PIN value will be reset and the public and private keys will be removed from the device.</string>
    <string name="pin_reset_title">Reset the PIN</string>
    <string name="pin_set">set a PIN</string>
    <string name="pin_wrong">wrong code</string>
    <string name="private_api_activation_question">Activate for the current session?</string>
    <string name="private_api_account">For the request \"Account balances\", activation of the private API functions is required.</string>
    <string name="private_api">Private API</string>
    <string name="private_api_order">For the \"Create Order\" request, activation of the private API functions is required.</string>
    <string name="private_api_incorrect_key">Incorrect key API values. Check the settings.</string>
    <string name="key_private_api_summary">Touch to activate.</string>
    <string name="private_api_activation_setting">Enabling can be done in the configuration section \"API tokens\"</string>
    <string name="private_api_activated">Functions are activated until the end of the trial period</string>
    <string name="button_buy">Buy</string>
    <string name="title_purchase">Purchase</string>
    <string name="private_api_purchase">Purchase</string>
    <string name="button_own">Own</string>
    <string name="alert_already_purchased">Already purchased</string>
    <string name="day_purchased">day purchased</string>
    <string name="button_change">Change</string>
    <string name="error_no_skus">We didn\'t find any SKUs to display. Check your internet connection and make sure your Google Developer Console was setup correctly.</string>
    <string name="error_billing_unavailable">Billing unavailable. Make sure your Google Play app is setup correctly.</string>
    <string name="error_billing_default">Billing unavailable. Please check your device.</string>
    <string name="header_inapp">One-time deals</string>
    <string name="header_subscriptions">Subscriptions</string>
    <string name="button_subscription_own">valid</string>
    <string name="action_subscription">Subscription</string>
    <string name="private_api_activation_menu">You can activate it by selecting the menu item</string>
    <string-array name="observer_frequency">
        <item>every 5 minutes</item>
        <item>every 10 minutes</item>
        <item>every 15 minutes</item>
        <item>every 20 minutes</item>
        <item>every 30 minutes</item>
    </string-array>
</resources>