<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

<!--
    <Preference
        android:defaultValue="@string/value_not_specified"
        android:key="key_private_api"
        android:selectAllOnFocus="true"
        android:summary="@string/key_private_api_summary"
        android:title="@string/private_api" />
-->

    <Preference
        android:defaultValue="@string/value_not_specified"
        android:key="public_key"
        android:selectAllOnFocus="true"
        android:title="@string/public_key" />

    <Preference
        android:defaultValue="@string/value_not_specified"
        android:key="private_key"
        android:selectAllOnFocus="true"
        android:title="@string/private_key" />

    <Preference
        android:defaultValue="@string/value_not_specified"
        android:key="key_removal"
        android:selectAllOnFocus="true"
        android:summary="@string/key_removal_summary"
        android:title="@string/key_removal" />

</PreferenceScreen>