<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="switch_sort_price"
        android:title="@string/switch_sort_price" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="switch_market_uah"
        android:title="@string/markets_uah_olnly" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="switch_price_usd"
        android:title="@string/switch_use_rate" />

    <EditTextPreference
        android:defaultValue="0f"
        android:dependency="switch_price_usd"
        android:inputType="numberDecimal"
        android:key="rate_usduah"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/rate_usduah" />

</PreferenceScreen>